# lex-db

./: .env.example  .gitignore  Makefile  README.md  conftest.py  main.py  mypy.ini  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: story-template.md
.notes/: directory_structure.md  vector_store_implementation_plan.md
db/: migrate_articles.load  run_migration.sh  schema.sql
lex_db/: __init__.py  config.py  database.py  embeddings.py  utils.py
lex_db/api/: __init__.py  routes.py
openapi/: openapi.yaml
scripts/: automatic-deploy-preproduction.sh  automatic-deploy-staging.sh  create_vector_index.py  deploy-preproduction.sh  deploy-staging.sh  update_vector_indexes.py
src/lex_db/: __init__.py  advanced_search.py  config.py  database.py  embeddings.py  hybrid_hyde_search.py  hybrid_search.py  hyde_search.py  search_utils.py  sitemap.py  utils.py  vector_store.py
src/lex_db/api/: __init__.py  routes.py
src/scripts/: add_batch_embeddings_to_index.py  create_chunks.py  create_fts_chunks_index.py  create_fts_index.py  create_openai_embedding_batches.py  create_vector_index.py  dump_articles.py  export_sqlite_vector_index.py  generate_embeddings.py  import_vector_embeddings.py  populate_vector_index_metadata.py  sync_articles.py  update_vector_indexes.py
src/stubs/sqlite_vec/: __init__.pyi
src/tests/: test_chunking.py  test_database.py  test_embeddings.py  test_html_to_markdown.py  test_lex_db.py  test_semantic_chunking.py  test_sitemap.py  test_sync_articles.py  test_vector_store.py
stubs/sqlite_vec/: __init__.pyi
tests/: test_lex_db.py
