[project]
name = "lex-db"
version = "0.1.0"
description = "A wrapper around a sqlite database for encyclopedia articles with vector and full-text search capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlite-vec>=0.1.6",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.11.9",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "sentence-transformers>=4.1.0",
    "openai>=1.79.0",
    "sqlite-utils>=3.38",
    "setuptools>=80.7.1",
    "types-setuptools>=80.8.0.20250521",
    "types-pyyaml>=6.0.12.20250516",
    "tiktoken>=0.9.0",
    "sentence-splitter>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "ruff>=0.11.8"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"  
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["src"]

[mypy.plugins.hatchling]
enabled = true